force-app/main/default/objects/custom_create364__c/custom_create364__c.object-meta.xml
<CustomObject>
    <label>Custom created object364</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects364</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>