force-app/main/default/objects/custom_create364__c/fields/custom_create_364field588__c.field-meta.xml
<CustomField>
    <fullName>custom_create_364field588__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 364field588</label>
    <type>Checkbox</type>
</CustomField>